--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,46 @@
-﻿altair==5.5.0
-attrs==24.2.0
+altair==5.5.0
+attrs==24.3.0
 blinker==1.9.0
 cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-cloup==3.0.5
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-decorator==5.1.1
 gitdb==4.0.11
 GitPython==3.1.43
-glcontext==3.0.0
 idna==3.10
-isosurfaces==0.1.2
-Jinja2==3.1.4
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-manim==0.18.1
-ManimPango==0.6.0
-mapbox_earcut==1.0.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-moderngl==5.12.0
-moderngl-window==3.0.3
-narwhals==1.14.2
-networkx==3.4.2
-numpy==2.1.3
+narwhals==1.19.1
+numpy==2.2.0
+opencv-python==4.10.0.84
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
-protobuf==5.28.3
+protobuf==5.29.2
 pyarrow==18.1.0
-pycairo==1.27.0
 pydeck==0.9.1
-pydub==0.25.1
-pyglet==2.0.19
-PyGLM==2.7.3
 Pygments==2.18.0
+PyQt6==6.8.0
+PyQt6-Qt6==6.8.1
+PyQt6_sip==13.9.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
-rpds-py==0.21.0
-scipy==1.14.1
-screeninfo==0.8.1
-six==1.16.0
-skia-pathops==0.8.0.post2
+rpds-py==0.22.3
+six==1.17.0
 smmap==5.0.1
-srt==3.5.3
-streamlit==1.40.2
-svgelements==1.9.6
+streamlit==1.41.1
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
-tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
-urllib3==2.2.3
+urllib3==2.3.0
 watchdog==6.0.0
-nbdt==0.0.4
-torch==1.8.1
-torchvision==0.9.1
-
